# terra-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PLAN.md
notebooks/: 01_quickstart.ipynb  02_dependency_graph.ipynb  03_remote_state_and_risk.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: 01_quickstart-checkpoint.ipynb  Untitled-checkpoint.ipynb
terra/: __init__.py  cli.py
terra/drift/: __init__.py
terra/frame/: __init__.py  _flatten.py  changes.py  resources.py  state_diff.py
terra/graph/: __init__.py  build.py  render.py
terra/load/: __init__.py  cache.py  local.py  s3.py
terra/magic/: __init__.py  terraform.py
terra/risk/: __init__.py  rules.py  score.py
terra/schema/: __init__.py  common.py  plan.py  state.py
tests/: conftest.py  test_cache.py  test_cli.py  test_frame.py  test_graph.py  test_magic.py  test_risk.py  test_schema.py
tests/fixtures/: plan.json  state.json
