[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terra-tf"
version = "0.3.0"
description = "Notebook-native Terraform analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["terraform", "infrastructure", "jupyter", "pandas", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "networkx>=3.0",
    "boto3>=1.28",
    "click>=8.0",
    "ipython>=8.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipycytoscape>=1.3",
    "ipywidgets>=8.0",
]
drift = [
    "kubernetes>=28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "moto[s3]>=5.0",
    "types-boto3",
]

[project.scripts]
terra = "terra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["terra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=terra --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["terra/drift/*", "terra/magic/*", "notebooks/*"]
